--- a/src/style.css
+++ b/src/style.css
@@ -105,8 +105,9 @@ hr {
 }
 
 .forecast-container-icon {
-  text-align: center;
-  font-size: 30px;
+  width: 50%;
+  display: block;
+  margin: 0 auto;
 }
 
 .forecast-container-temperatures {
